Removed overflow from Menubar [fix bug 758938]

--- a/widget/menu/src/css/menu.css
+++ b/widget/menu/src/css/menu.css
@@ -82,7 +82,6 @@ div.yuimenubar ul {
     list-style-type:none;
     margin:0;
     padding:0;
-    overflow:hidden;
 
 }
 
